k8s/31-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centreon-web
  namespace: centreon
spec:
  selector:
    app: centreon
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: centreon-gorgone
  namespace: centreon
spec:
  selector:
    app: centreon
  ports:
    - { name: zmq,  port: 5556, targetPort: 5556 }
    - { name: http, port: 8085, targetPort: 8085 }
  type: ClusterIP
